--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "mdmsoft/yii2-admin": "~2.0",
         "dmstr/yii2-adminlte-asset": "2.0",
-        "yiisoft/yii2-httpclient": "~2.0.0"
+        "yiisoft/yii2-httpclient": "~2.0.0",
+        "fproject/yii2-restx": "*",
+        "fproject/php-jwt": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
